# boxcat-log-collector

./: .gitignore  Cargo.toml  README.md
src/: main.rs  message.rs  test.rs  ws.rs
src/search/: mod.rs
