[package]
name = "boxcat-log-collector"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
tokio = { version = "1.8.1", features = ["full"] }
reqwest = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
once_cell = "1.8.0"
dotenv = "0.15.0"
tokio-tungstenite = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
byteorder = "1.4.3"
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
async-compression = { version = "0.3.8", features = ["zstd", "tokio"] }
chrono = "0.4.19"
async-recursion = "0.3.2"

[dependencies.meilisearch-sdk]
version = "0.9"
features = ["sync"]
git = "https://github.com/juzi5201314/meilisearch-rust"
path = "../meilisearch-rust"
